--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -53,6 +53,13 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+    
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        role-to-assume: arn:aws:iam::951290081390:role/github
+        role-session-name: github
+        aws-region: ${{ env.AWS_REGION }}
 
     - name: Login to Amazon ECR
       id: login-ecr
